# GCfit

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
devnotes/: notes.md  orbital_bugfixes.ipynb  testing.ipynb
docs/: requirements.txt
docs/pdf_src/: CLUSTER_DPC_V2.tex  DP_initials.tex  DP_massfunction.tex  DP_numberdensity.tex  DP_propermotion.tex  DP_pulsar.tex
docs/source/: citations.rst  conf.py  errors.rst  examples.rst  fitting.rst  index.rst  installation.rst  models.rst  standards.rst  usage.rst
docs/source/_templates/: class_inherit_template.rst  class_template.rst
docs/source/raws/: package-structure.sla
docs/source/ref/: analysis.rst  api.rst  core.data.rst  core.main.rst  core.rst  probabilities.rst  util.rst  visualize.rst
docs/source/usage/: analysis_usage.rst  fitting_usage.rst  models_usage.rst  usage.rst
docs/src/: CLUSTER_DPC_V1.aux  CLUSTER_DPC_V1.tex  CLUSTER_DPC_V2.tex  DP_initials.tex  DP_massfunction.tex  DP_numberdensity.tex  DP_priors.tex  DP_propermotion.tex  DP_pulsar.tex  DP_velocitydispersion.tex  package-structure.sla
fitter/: __init__.py  data.py  likelihoods.py  new_Paz.py  probabilities.py  util.py  visualize.py
fitter/analysis/: models.py  runs.py
fitter/core/: data.py  main.py
fitter/probabilities/: __init__.py  mass.py  priors.py  probabilities.py  pulsars.py
fitter/resources/: 47_Tuc.hdf5  M62.hdf5  NGC0104.hdf  NGC0104.hdf5  NGC0288.hdf  NGC0362.hdf  NGC1261.hdf  NGC1851.hdf  NGC2808.hdf  NGC3201.hdf  NGC4372.hdf  NGC4590.hdf  NGC4833.hdf  NGC5024.hdf  NGC5139.hdf  NGC5272.hdf  NGC5904.hdf  NGC5927.hdf  NGC5986.hdf  NGC6093.hdf  NGC6121.hdf  NGC6171.hdf  NGC6205.hdf  NGC6218.hdf  NGC6254.hdf  NGC6266.hdf  NGC6266.hdf5  NGC6341.hdf  NGC6352.hdf  NGC6362.hdf  NGC6366.hdf  NGC6397.hdf  NGC6397.hdf5  NGC6541.hdf  NGC6624.hdf  NGC6656.hdf  NGC6681.hdf  NGC6723.hdf  NGC6752.hdf  NGC6779.hdf  (+7 more)
fitter/resources/backup/: backup47.hdf5  backup62.hdf5  backup6397.hdf5
fitter/util/: __init__.py  data.py  probabilities.py  units.py  util.py
fitter/visualize/: __init__.py  models.py  runs.py  visualize.py
gcfit/: __init__.py
gcfit/analysis/: __init__.py  models.py  runs.py
gcfit/core/: __init__.py  data.py  main.py
gcfit/probabilities/: __init__.py  mass.py  priors.py  probabilities.py  pulsars.py
gcfit/resources/: NGC0104.hdf  NGC0288.hdf  NGC0362.hdf  NGC1261.hdf  NGC1851.hdf  NGC2808.hdf  NGC3201.hdf  NGC4372.hdf  NGC4590.hdf  NGC4833.hdf  NGC5024.hdf  NGC5139.hdf  NGC5272.hdf  NGC5904.hdf  NGC5927.hdf  NGC5986.hdf  NGC6093.hdf  NGC6121.hdf  NGC6171.hdf  NGC6205.hdf  NGC6218.hdf  NGC6254.hdf  NGC6266.hdf  NGC6341.hdf  NGC6352.hdf  NGC6362.hdf  NGC6366.hdf  NGC6397.hdf  NGC6541.hdf  NGC6624.hdf  NGC6656.hdf  NGC6681.hdf  NGC6723.hdf  NGC6752.hdf  NGC6779.hdf  NGC6809.hdf  NGC6981.hdf  NGC7078.hdf  NGC7089.hdf  NGC7099.hdf  (+1 more)
gcfit/scripts/: GCfitter.py  __init__.py  generate_model_CI.py
gcfit/util/: __init__.py  data.py  mass.py  probabilities.py  units.py
pulsar_testing/: notes.md  orbital_bugfixes.ipynb  testing.ipynb
tests/: test_data.py  test_fitter.py  test_probabilities.py
(+27 files in other folders)
